syntax = "proto3";

package snapshotservice.pb;

option go_package = "github.com/plgd-dev/hub/v2/snapshot-service/pb;pb";

import "resource-aggregate/pb/resources.proto";


message ResourceSnapshot {
    message ApplyToDevices {
        bool origin = 1; // device that is originally started the scene
        repeated string device_ids = 2; // identifies devices
        repeated string device_types = 3; // device type just for filtering device when device_ids and current device is not set
    }
    message ApplyToResources {
        repeated string hrefs = 1; // identifies resources at the device.
        repeated string types = 2; // and operator among types -> type defines a list of properties in content 
    }
    ApplyToDevices device_filter = 1;
    ApplyToResources resource_filter = 2;

    resourceaggregate.pb.Content content = 5;
    string resource_interface = 6; // optional update interface
    int64 time_to_live = 7; // optional update command time to live
}

message Scene {
    string id = 1;
    string name = 2;
    repeated ResourceSnapshot resources = 3;
}


